--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,12 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.6
   flutter_svg: ^2.0.10+1  
+  shared_preferences:
+  image_picker:
+  intl_phone_field:
+  dio:
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -40,6 +46,7 @@ dependencies:
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
+  pretty_dio_logger:
   flutter_test:
     sdk: flutter
 
